# tinta

./: .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  README.md  commitlint.config.js  main.py  pyproject.toml
.github/workflows/: build_image.yml  format.yml  reformat.yml  release.yml
clusters/anter/flux-system/: gotk-sync.yaml
kubernetes/: certificate-tinta.yaml  deployment-tinta.yaml  ingress-tinta.yaml  issuer-tinta.yaml  service-tinta.yaml
kubernetes/flux-system/: gotk-sync.yaml
src/: app.py  labels.txt  main.py  model.py
