[tool.poetry]
name = "tinta"
version = "0.1.0"
description = "This is a ML project for hand drawing recongition"
authors = ["nelson <nelson.antunes994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
