[tool.poetry]
name = "tinta"
version = "0.1.0"
description = "This is a ML project for hand drawing recongition"
authors = ["nelson <nelson.antunes994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gradio = "3.32.0"
poethepoet = "^0.20.0"
mlflow = "^2.4.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
pre-commit = "^3.3.2"
jupyter = "^1.0.0"

[tool.poetry.group.semver.dependencies]
python-semantic-release = "^7.34.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "src/__init__.py:__version__"
branch = "main"
upload_to_repository = false
upload_to_release = false

[tool.poe.tasks]
torch-gpu = "pip install torch==1.10.0+cu117 torchvision==0.14.0+cu117 --index-url https://download.pytorch.org/whl/cu117"
torch-cpu = "pip install torch==1.13.1 torchvision==0.14.1 --extra-index-url https://download.pytorch.org/whl/cpu"
